--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,7 @@ html{
 
 body{
     background: url(../bg-mob.png);
+    background-size: cover;
     z-index: -1;
     .overlayer{
         position: absolute;
@@ -25,6 +26,7 @@ body{
         height: 100%; 
         z-index: 1;
         background: rgba($primary-home-color,$home-opacity);
+        background-size: cover;
     }
 
 }
@@ -33,6 +35,7 @@ body{
         position: absolute;
         top: 23%;
         left: 10%;
+        bottom:23%;
         line-height: 70px;
         color: rgba(white,0.8);
         z-index: 1;
@@ -54,7 +57,8 @@ body{
             }
             
     .icons{
-        a{
+        a{  
+            color: rgba(#707070,0.7);
             line-height: 100px;
             text-decoration-line: none;
             &:hover{
@@ -76,7 +80,7 @@ nav{
         z-index: 2;
         &:hover{
             .btn-line{
-                background: #551A8B;
+                background: gray;
             }
             }
         
