--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+/* Sets the ease-out transition for the given element and time */
+/* Decides what color to use based on given color and opacity for the element */
+/* Gets rid of all the default stylings */
 *html {
   margin: 0;
   padding: 0;
@@ -10,97 +13,109 @@
 html {
   font-family: "Ms PGothic"; }
 
+/* Removes the underlines and other default decorations from the link */
+a {
+  text-decoration: none; }
+
+/* Forms a layer of black color which is then lightened over the background image to create the overall background in case of HOME */
 body {
   overflow: hidden;
   background: url(../bg-mob.png);
   background-attachment: fixed;
   background-size: cover;
-  z-index: -1; }
-  body .overlayer {
+  z-index: -1;
+  /* Adds a pseudo element after the background image, that is our layer of black color */ }
+  body:after {
+    content: '';
     position: absolute;
     top: 0;
     right: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
     background: rgba(0, 0, 0, 0.82);
     background-size: cover; }
 
+/* The home-text section is everything that we display on our homepage */
 .home-text {
   font-size: 55px;
-  position: absolute;
-  top: 23%;
+  position: fixed;
+  top: 25%;
   left: 10%;
-  bottom: 23%;
+  bottom: 25%;
   line-height: 70px;
   color: rgba(255, 255, 255, 0.8);
-  z-index: 1; }
+  z-index: 1;
+  /* Sets the background of the quote written on home */
+  /* Sets the properties for the icons taken from Font-Awesome to blend in the home page */ }
   .home-text .quote {
     width: 100%;
     height: 35px;
-    background: rgba(112, 112, 112, 0.2); }
+    background: rgba(112, 112, 112, 0.2);
+    /* Sets the properties of the text inside the quote div */ }
     .home-text .quote h6 {
       color: white;
       line-height: 30px;
       font-size: 25px;
-      z-index: 4; }
-  .home-text .icons a {
-    color: rgba(112, 112, 112, 0.7);
-    line-height: 100px;
-    text-decoration-line: none; }
-    .home-text .icons a:hover {
-      color: gray;
+      padding: 2px; }
+  .home-text .icons {
+    /* Sets properties for link to social media handles */ }
+    .home-text .icons a {
+      color: rgba(112, 112, 112, 0.7);
+      line-height: 100px;
       transition: all 0.5s ease-out; }
+      .home-text .icons a:hover {
+        color: gray; }
 
-nav .menu-btn {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  z-index: 3; }
-  nav .menu-btn:hover .btn-line {
-    background: gray;
-    transition: all 0.5s ease-out; }
-  nav .menu-btn .btn-line {
-    width: 28px;
-    height: 3px;
-    background: white;
-    margin: 5px;
-    transition: 1s; }
-  nav .menu-btn .btn1-effect {
-    position: relative;
-    width: 100vm; }
-  nav .menu-btn .btn2-effect {
-    width: 30px;
-    height: 4px; }
-  nav .menu-btn .btn3-effect {
-    transform: rotateZ(90deg);
-    width: 100vm; }
-
-nav .menu {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0);
-  z-index: 2;
-  transition: all 2s; }
-  nav .menu ul {
-    color: rgba(255, 255, 255, 0);
-    margin-top: 20%;
-    margin-bottom: 20%;
-    list-style-type: none; }
-    nav .menu ul a {
-      display: none;
-      font-size: 50px;
-      font-weight: bold;
-      margin-left: 10%;
-      margin-right: 10%;
-      line-height: 60px; }
-
-nav .menu_effect {
-  display: block;
-  background: rgba(0, 0, 0, 0.9);
-  color: rgba(255, 255, 255, 0.7); }
-  nav .menu_effect a {
-    display: block !important; }
+/* Navigation bar present on the home along-with the layer that opens on clicking it and related properties */
+nav {
+  /* The menu layer that appears on clicking the menu button */ }
+  nav .menu-btn-before {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    z-index: 3;
+    /* Defines the properties of the button lines that are present on the menu icon */ }
+    nav .menu-btn-before .btn-line {
+      width: 28px;
+      height: 3px;
+      background: white;
+      margin: 5px;
+      transition: all 0.5s ease-out; }
+    nav .menu-btn-before:hover .btn-line {
+      background: gray; }
+  nav .menu-btn-after {
+    z-index: 0;
+    position: fixed; }
+    nav .menu-btn-after #btn1 {
+      top: 15px;
+      right: 15px;
+      width: 100%;
+      height: 3px; }
+  nav .menu {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0);
+    z-index: 2;
+    transition: all 1s ease-out; }
+    nav .menu ul {
+      color: rgba(255, 255, 255, 0);
+      margin-top: 20%;
+      margin-bottom: 20%;
+      list-style-type: none; }
+      nav .menu ul a {
+        display: none;
+        font-size: 50px;
+        font-weight: bold;
+        margin-left: 10%;
+        margin-right: 10%;
+        line-height: 60px; }
+  nav .menu_effect {
+    display: block;
+    background: rgba(0, 0, 0, 0.9);
+    color: rgba(255, 255, 255, 0.7); }
+    nav .menu_effect a {
+      display: block !important; }
