Added js for the signature
To make the signature change into hindi and english fonts the
js is currently implemented.

--- a/css/intro.css
+++ b/css/intro.css
@@ -1,11 +1,14 @@
 #intro-part{
     text-align: center;
 }
-.signature1 {
+
+#signature {
     display: inline-block;
     position: fixed;
     top: 34%;
     font-size: 400%;
+}
+.signature1 {
     font-family: 'Pacifico', cursive;
 }
 
