--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ a {
   text-decoration: none; }
 
 /* Forms a layer of black color which is then lightened over the background image to create the overall background in case of HOME */
-body {
+body .home-page-body {
   overflow: hidden;
   background: url(../bg-mob.png);
   background-attachment: fixed;
