--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ a {
 /* Forms a layer of black color which is then lightened over the background image to create the overall background in case of HOME */
 body .home-page-body {
   overflow: hidden;
-  background: url(../bg-mob.png);
+  background: url('../bg-mob.png');
   background-attachment: fixed;
   background-size: cover;
   z-index: -1;
