Completes intro and homepage merge final phase.
Merged the content and homepage completely, Added particles.js to
the homepage for better design. Also shifted the js and static files
in respecting folders, thus giving the project a cleaner structure.

The next task would be to finalize the individual pages for each of the
options in the content view and working on it's overall design and
improving it.

--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ a {
 /* Forms a layer of black color which is then lightened over the background image to create the overall background in case of HOME */
 body {
     overflow: hidden;
-    background: url('../bg-mob.png');
+    background: url('../static/bg-mob.png');
     background-attachment: fixed;
     background-size: cover;
     z-index: -1;
@@ -55,7 +55,7 @@ body:after {
     bottom: 25%;
     line-height: 70px;
     color: rgba(255, 255, 255, 0.8);
-    z-index: 1;
+    z-index: 3;
     /* Sets the background of the quote written on home */
     /* Sets the properties for the icons taken from Font-Awesome to blend in the home page */
 }
